# cli

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  Jenkinsfile  Jenkinsfile-gr  README (1)  README.md  attr  env.py  general  pilotcli.REMOVED.git-id  pyproject.toml  requirements.txt  resumable_upload_log.json  run.py  setup.py
.github/merge_request_templates/: default.md
.github/workflows/: build-and-publish.yml  main.yml  run-tests.yml
app/: pilotcli.py
app/bundled_app/linux/: pilotcli.REMOVED.git-id
app/commands/: container_registry.py  dataset.py  entry_point.py  file.py  folder.py  hpc.py  kg_resource.py  project.py  use_config.py  user.py
app/configs/: app_config.py  config.py  user_config.py  utils.py
app/models/: convert_type.py  enums.py  folder.py  item.py  service_meta_class.py  singleton.py  upload_form.py
app/resources/: custom_error.py  custom_help.py
app/services/clients/: base_auth_client.py  base_client.py
app/services/container_registry_manager/: container_registry_manager.py
app/services/crypto/: crypto.py
app/services/dataset_manager/: dataset_detail.py  dataset_download.py  dataset_list.py  model.py
app/services/file_manager/: file_download.py  file_lineage.py  file_list.py  file_manifests.py  file_tag.py  file_upload.py
app/services/file_manager/file_download/: download_client.py  model.py
app/services/file_manager/file_metadata/: file_metadata_client.py  folder_client.py
app/services/file_manager/file_move/: file_move_client.py
app/services/file_manager/file_trash/: file_trash_client.py  utils.py
app/services/hpc_manager/: hpc_auth.py  hpc_cluster.py  hpc_jobs.py
app/services/kg_manager/: kg_resource.py
app/services/logger_services/: debugging_log.py  log_functions.py
app/services/output_manager/: error_handler.py  help_page.py  message_handler.py  response_handler.py
app/services/project_manager/: project.py
app/services/user_authentication/: decorator.py  token_manager.py  user_login_logout.py  user_set_config.py
app/utils/: aggregated.py
tests/: __init__.py  conftest.py  logger.py  pytest.ini  test_command.py  test_config.py  test_container_registry.py  test_core.py
tests/app/commands/: test_dataset.py  test_entry_point.py  test_file.py  test_folder.py  test_project_command.py  test_user.py
tests/app/configs/: test_user_config.py
tests/app/utils/: test_aggregated.py
tests/fixtures/: fake.py
(+23 files in other folders)
