[tool.poetry]
name = "app"
version = "1.9.0"
description = "This service is designed to support pilot platform"
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "7.1.2"
PyJWT = "1.7.1"
questionary = "^1.10.0"
tqdm = "4.56.0"
cryptography = "3.1.1"
urllib3 = "1.25.10"
requests = "2.24.0"
pydantic = "^1.9.2"
cffi = "^1.15.1"
pre-commit = "^2.19.0"
pyinstaller = "^5.4.1"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
requests-mock = "^1.9.3"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"


[tool.poetry.scripts]
pilotcli = "app.pilotcli:cli"

[tool.poetry.group.dev.dependencies]
pytest-httpx = "^0.21.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
